[package]
name = "os"
version = "0.1.0"
authors = ["Galilée 'Bill' Enguehard <galilee.enguehard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort" # Disable stack unwinding on panic

[profile.release]
panic = "abort" # Disable stack unwinding on panic

[dependencies]
